criando e estilizando o menu superior

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body class="main-bg">
-  <h1>Teste</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, fugit corrupti, modi, illum est voluptate atque ipsa soluta tempora porro facere id explicabo voluptatum et. Autem officia earum nemo harum.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <aside class="menu-container white-bg">
+      <div class="menu-content main-content">
+        <div class="logo-container">
+          <a href="#">
+            <img src="./assets/img/logo.svg" alt="logo" class="menu-logo" />
+          </a>
+        </div>
+        <nav>
+          <ul class="menu-list">
+            <li class="menu-items"><a href="#">intro</a></li>
+            <li class="menu-items"><a href="#">top 3</a></li>
+            <li class="menu-items"><a href="#">gallery</a></li>
+            <li class="menu-items"><a href="#">work</a></li>
+            <li class="menu-items"><a href="#">contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </aside>
+
+    <!-- First Section-->
+    <section class="section main-bg">
+
+    </section>
+    <section class="section white-bg">
+
+    </section>
+  </body>
 </html>
